StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  labels:
    name: jenkins
  namespace: kube-ops
spec:
  serviceName: jenkins
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: jenkins
      labels:
        app: jenkins
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: registry.cn-beijing.aliyuncs.com/dengyou/kube-ops:myjenkins
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            name: web
            protocol: TCP
          - containerPort: 50000
            name: agent
            protocol: TCP
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1024Mi
          volumeMounts:
            - name: data
              mountPath: /var/jenkins_home
          #livenessProbe:
          #  httpGet:
          #    path: /login
          #    port: 8080
          #  initialDelaySeconds: 60
          #  timeoutSeconds: 5
          #  failureThreshold: 12
          #readinessProbe:
          #  httpGet:
          #    path: /login
          #    port: 8080
          #  initialDelaySeconds: 60
          #  timeoutSeconds: 5
          #  failureThreshold: 12
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: "managed-nfs-storage"
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 40Gi
