ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jenkins
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jenkins.linux.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
